syntax="proto3";

package idl;

option go_package="./idl/my_proto;student_service";

message Student{
    string name = 1;
    repeated string Locations = 2;
    map<string,float> Scores = 3;
    bool gender = 4;
    int32 age = 5;
    float Height = 6;
}

message Request{
    string StudentId = 1;
}

service StudentService{
    rpc GetStudentInfo (Request) returns (Student);
}
